[package]
name = "luxnulla"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"], default-features = false }
futures = "0.3.28"
anyhow = "1.0.98"
dirs = "6.0.0"
eyre = "0.6.12"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12.22", features = [
    "rustls-tls",
], default-features = false }
base64 = "0.22.1"
rand = "0.9.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.4"
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
thiserror = "1.0"
notify = "8.2.0"

[dev-dependencies]
tempfile = "3.8"
